selection of future date is restricted and app logo changed and some UI changes done

--- a/app/src/main/res/layout/fragment_view_habit.xml
+++ b/app/src/main/res/layout/fragment_view_habit.xml
@@ -85,9 +85,9 @@
                 android:id="@+id/stats_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
                 android:layout_below="@+id/line0"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -100,9 +100,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/tv_streak"
                         android:layout_alignEnd="@+id/tv_streak"
+                        android:layout_marginTop="8dp"
                         android:fontFamily="@font/font_ui"
                         android:gravity="center"
-                        android:padding="8dp"
                         android:textColor="@color/numbers_color"
                         android:textSize="22sp"
                         android:textStyle="bold" />
@@ -113,6 +113,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_streak_value"
                         android:layout_alignTop="@+id/tv_streak"
+                        android:layout_centerVertical="true"
                         android:layout_alignBottom="@+id/tv_streak"
                         android:layout_toEndOf="@+id/tv_streak"
                         android:src="@drawable/flash"
@@ -127,31 +128,33 @@
                         android:fontFamily="@font/font_ui"
                         android:padding="8dp"
                         android:text="@string/best_streak"
-                        android:textSize="20sp" />
+                        style="@style/highLightTextStyle"
+                        android:textSize="18sp" />
 
 
                 </RelativeLayout>
 
-              <View
-                  android:layout_width="1dp"
-                  android:background="@color/light_grey"
-                  android:layout_height="match_parent"/>
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_grey" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
-                   android:gravity="center"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:gravity="center">
 
                     <TextView
                         android:id="@+id/tv_completion"
+                        style="@style/highLightTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_completion_value"
                         android:fontFamily="@font/font_ui"
                         android:padding="8dp"
                         android:text="@string/completion"
-                        android:textSize="20sp" />
+                        android:textSize="18sp" />
 
 
                     <TextView
@@ -159,10 +162,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/tv_completion"
-                        android:layout_alignEnd="@+id/tv_completion"
+                        android:layout_alignEnd="@+id/iv_like"
+                        android:layout_marginTop="8dp"
                         android:fontFamily="@font/font_ui"
                         android:gravity="center"
-                        android:padding="8dp"
                         android:textColor="@color/numbers_color"
                         android:textSize="22sp"
                         android:textStyle="bold" />
@@ -172,11 +175,62 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_completion_value"
-                        android:layout_toEndOf="@+id/tv_completion"
                         android:layout_alignTop="@+id/tv_completion"
                         android:layout_alignBottom="@+id/tv_completion"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/tv_completion"
                         android:src="@drawable/thumbs_up"
                         app:tint="#24A0ED" />
+
+
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_grey" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_total_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/tv_total"
+                        android:layout_alignEnd="@+id/tv_total"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/font_ui"
+                        android:gravity="center"
+                        android:textColor="@color/numbers_color"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_flag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_total_value"
+                        android:layout_alignTop="@+id/tv_total"
+                        android:layout_centerVertical="true"
+                        android:layout_alignBottom="@+id/tv_total"
+                        android:layout_toEndOf="@+id/tv_total"
+                        android:src="@drawable/flag"
+                        app:tint="#00FF82" />
+
+                    <TextView
+                        android:id="@+id/tv_total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_total_value"
+                        android:layout_centerHorizontal="true"
+                        android:fontFamily="@font/font_ui"
+                        android:padding="8dp"
+                        style="@style/highLightTextStyle"
+                        android:text="@string/total"
+                        android:textSize="18sp" />
 
 
                 </RelativeLayout>
@@ -206,7 +260,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_below="@+id/tv_best_streaks" />
-
 
 
             <View
