--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="color">@color/purple_200</item>
     </style>
+
+    <style name="highLightTextStyle">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+
 </resources>
